--- a/rootfs/usr/share/www/index.html
+++ b/rootfs/usr/share/www/index.html
@@ -11,7 +11,7 @@
     <div class="content">
       <div class="loading">
         <img src="/landingpage/static/logo.svg" alt="Vioneta Agro logo" />
-        <div class="header">Preparing Home&nbsp;Assistant</div>
+        <div class="header">Preparing Vioneta&nbsp;Agro</div>
         <div class="spinner" id="spinner" title="Click to show the log">
           <div class="double-bounce1"></div>
           <div class="double-bounce2"></div>
